package ar.edu.utn.frba.dds.serviciosExternos;

public interface MailSender {
  public void sendMail(String adress, String message);
}
