package ar.edu.utn.frba.dds.serviciosExternos;

public interface Notificador {
  public void notificar(String mensaje);
}
