package ar.edu.utn.frba.dds.serviciosExternos;

public interface NotificadorSender {
  public void notify(String mensaje);
}
